// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RendererDiff renders an image widget in the diff view 1`] = `
<div>
  <div>
    <div>
      <div
        class="diff-header"
      >
        Image
      </div>
      <div
        class="diff-header"
      >
        Image
      </div>
      <div
        class="diff-body ui-helper-clearfix"
      >
        <div
          class="diff-row before"
        />
        <div
          class="diff-row after"
        />
      </div>
      <div
        class="diff-row collapsed before"
        role="button"
        tabindex="0"
      >
        <span>
          <span
            class="expand-button"
          >
             
            [ show unmodified ]
             
          </span>
        </span>
      </div>
      <div
        class="diff-row collapsed after"
        role="button"
        tabindex="0"
      >
        <span>
          <span
            class="expand-button"
          >
             
            [ show unmodified ]
             
          </span>
        </span>
      </div>
    </div>
    <div
      class="diff-header"
    >
      image 1
    </div>
    <div
      class="diff-header"
    >
      image 1
    </div>
    <div
      class="diff-body ui-helper-clearfix"
    >
      <div>
        <div
          class="diff-row before"
        >
          <div
            class="image image-removed"
          >
            <span
              style="inset-block-start: 0; inset-inline-start: 0; width: 100%; height: 100%; position: absolute; min-inline-size: 20px; display: flex; justify-content: center; align-content: center;"
            >
              <div
                style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; justify-content: center;"
              >
                <svg
                  height="48"
                  viewBox="0 0 48 48"
                  width="48"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
                    data-keyframes-animation-name="0% { transform: rotate(0deg); } 50% { transform: rotate(180deg); } 100% { transform: rotate(360deg); }"
                    fill-rule="nonzero"
                    style="transform-origin: 50% 50%; animation-duration: 1.1s; animation-iteration-count: infinite; animation-timing-function: linear; fill: var(--wb-semanticColor-core-foreground-neutral-subtle);"
                  />
                </svg>
              </div>
            </span>
          </div>
        </div>
        <div
          class="diff-row after"
        >
          <div
            class="image image-added"
          >
            <span
              style="inset-block-start: 0; inset-inline-start: 0; width: 100%; height: 100%; position: absolute; min-inline-size: 20px; display: flex; justify-content: center; align-content: center;"
            >
              <div
                style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; justify-content: center;"
              >
                <svg
                  height="48"
                  viewBox="0 0 48 48"
                  width="48"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
                    data-keyframes-animation-name="0% { transform: rotate(0deg); } 50% { transform: rotate(180deg); } 100% { transform: rotate(360deg); }"
                    fill-rule="nonzero"
                    style="transform-origin: 50% 50%; animation-duration: 1.1s; animation-iteration-count: infinite; animation-timing-function: linear; fill: var(--wb-semanticColor-core-foreground-neutral-subtle);"
                  />
                </svg>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="diff-row before"
            >
              <div
                style="padding-inline-start: 0;"
              >
                options: 
                <span
                  class="inner-value dark "
                />
              </div>
            </div>
            <div
              class="diff-row after"
            >
              <div
                style="padding-inline-start: 0;"
              >
                options: 
                <span
                  class="inner-value dark "
                />
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  title: 
                  <span
                    class="inner-value dark removed"
                  >
                    "Original Image"
                  </span>
                </div>
              </div>
              <div
                class="added diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  title: 
                  <span
                    class="inner-value dark added"
                  >
                    "Updated Image"
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  caption: 
                  <span
                    class="inner-value dark removed"
                  >
                    "This is the original image"
                  </span>
                </div>
              </div>
              <div
                class="added diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  caption: 
                  <span
                    class="inner-value dark added"
                  >
                    "This is the updated image"
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  alt: 
                  <span
                    class="inner-value dark removed"
                  >
                    "Original image description"
                  </span>
                </div>
              </div>
              <div
                class="added diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  alt: 
                  <span
                    class="inner-value dark added"
                  >
                    "Updated image description"
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  backgroundImage: 
                  <span
                    class="inner-value dark "
                  />
                </div>
              </div>
              <div
                class="diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  backgroundImage: 
                  <span
                    class="inner-value dark "
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    url: 
                    <span
                      class="inner-value dark removed"
                    >
                      "https://example.com/original-image.jpg"
                    </span>
                  </div>
                </div>
                <div
                  class="added diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    url: 
                    <span
                      class="inner-value dark added"
                    >
                      "https://example.com/updated-image.jpg"
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    width: 
                    <span
                      class="inner-value dark removed"
                    >
                      400
                    </span>
                  </div>
                </div>
                <div
                  class="added diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    width: 
                    <span
                      class="inner-value dark added"
                    >
                      500
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    height: 
                    <span
                      class="inner-value dark removed"
                    >
                      300
                    </span>
                  </div>
                </div>
                <div
                  class="added diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    height: 
                    <span
                      class="inner-value dark added"
                    >
                      400
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="clear: both;"
          >
            <div
              class="diff-row collapsed before"
            >
              <div
                style="padding-block-start: var(--wb-sizing-size_040); padding-block-end: var(--wb-sizing-size_040); padding-inline-start: 20px;"
              >
                <button
                  aria-disabled="false"
                  data-kind="secondary"
                  data-style-active="background: var(--wb-semanticColor-action-secondary-neutral-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-secondary-neutral-press-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-press-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border);"
                  data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
                  data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                  data-style-focus-visible-active="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                  data-style-focus-visible-hover="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                  data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-secondary-neutral-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-secondary-neutral-hover-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-hover-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border);"
                  data-style-moz-focus-inner="border: 0px;"
                  style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-small); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-secondary-small); border-style: solid; border-width: var(--wb-c-button-root-border-width-secondary-default); border-color: var(--wb-semanticColor-action-secondary-neutral-default-border); background: var(--wb-semanticColor-action-secondary-neutral-default-background); color: var(--wb-semanticColor-action-secondary-neutral-default-foreground); transition: border-radius 0.1s ease-in-out;"
                  type="button"
                >
                  <span
                    style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-small); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-small); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
                  >
                    show unmodified
                  </span>
                </button>
              </div>
            </div>
            <div
              class="diff-row collapsed after"
            >
              <div
                style="padding-block-start: var(--wb-sizing-size_040); padding-block-end: var(--wb-sizing-size_040); padding-inline-start: 20px;"
              >
                <button
                  aria-disabled="false"
                  data-kind="secondary"
                  data-style-active="background: var(--wb-semanticColor-action-secondary-neutral-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-secondary-neutral-press-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-press-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border);"
                  data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
                  data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                  data-style-focus-visible-active="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                  data-style-focus-visible-hover="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                  data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-secondary-neutral-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-secondary-neutral-hover-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-hover-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border);"
                  data-style-moz-focus-inner="border: 0px;"
                  style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-small); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-secondary-small); border-style: solid; border-width: var(--wb-c-button-root-border-width-secondary-default); border-color: var(--wb-semanticColor-action-secondary-neutral-default-border); background: var(--wb-semanticColor-action-secondary-neutral-default-background); color: var(--wb-semanticColor-action-secondary-neutral-default-foreground); transition: border-radius 0.1s ease-in-out;"
                  type="button"
                >
                  <span
                    style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-small); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-small); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
                  >
                    show unmodified
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RendererDiff renders with both 'before' and 'after' undefined 1`] = `
<div>
  <div />
</div>
`;

exports[`RendererDiff renders with missing 'after' props 1`] = `
<div>
  <div>
    <div>
      <div
        class="diff-header"
      >
        Missing after
      </div>
      <div
        class="diff-header"
      >
        Missing after
      </div>
      <div
        class="diff-body ui-helper-clearfix"
      >
        <div
          class="diff-row before"
        >
          <div
            class="diff-line"
          >
            <span
              class="removed dark"
            >
              [[☃ radio 1]]
            </span>
          </div>
          <div />
        </div>
        <div
          class="diff-row after"
        >
          <div
            class="diff-line"
          >
            <span
              class="not-present"
            >
              [[☃ radio 1]]
            </span>
          </div>
          <div />
        </div>
      </div>
      <div
        class="diff-row before"
        role="button"
        tabindex="0"
      />
      <div
        class="diff-row after"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="diff-header"
    >
      radio 1
    </div>
    <div
      class="diff-header"
    >
      radio 1
    </div>
    <div
      class="diff-body ui-helper-clearfix"
    >
      <div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="removed dark diff-row before"
            >
              <div
                style="padding-inline-start: 0;"
              >
                options: 
                <span
                  class="inner-value dark removed dark"
                />
              </div>
            </div>
            <div
              class="blank-space diff-row after"
            >
              <div
                style="padding-inline-start: 0;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  choices: 
                  <span
                    class="inner-value dark removed dark"
                  />
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    0: 
                    <span
                      class="inner-value dark removed dark"
                    />
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        "radio-choice-0"
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    1: 
                    <span
                      class="inner-value dark removed dark"
                    />
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        "radio-choice-1"
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    2: 
                    <span
                      class="inner-value dark removed dark"
                    />
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        "radio-choice-2"
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    3: 
                    <span
                      class="inner-value dark removed dark"
                    />
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="removed dark diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark removed dark"
                      >
                        "radio-choice-3"
                      </span>
                    </div>
                  </div>
                  <div
                    class="blank-space diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  randomize: 
                  <span
                    class="inner-value dark removed dark"
                  >
                    false
                  </span>
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  hasNoneOfTheAbove: 
                  <span
                    class="inner-value dark removed dark"
                  >
                    false
                  </span>
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  multipleSelect: 
                  <span
                    class="inner-value dark removed dark"
                  >
                    false
                  </span>
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  countChoices: 
                  <span
                    class="inner-value dark removed dark"
                  >
                    false
                  </span>
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  deselectEnabled: 
                  <span
                    class="inner-value dark removed dark"
                  >
                    false
                  </span>
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RendererDiff renders with missing 'before' props 1`] = `
<div>
  <div>
    <div>
      <div
        class="diff-header"
      >
        Missing before
      </div>
      <div
        class="diff-header"
      >
        Missing before
      </div>
      <div
        class="diff-body ui-helper-clearfix"
      >
        <div
          class="diff-row before"
        >
          <div
            class="diff-line"
          >
            <span
              class="not-present"
            >
              [[☃ radio 1]]
            </span>
          </div>
          <div />
        </div>
        <div
          class="diff-row after"
        >
          <div
            class="diff-line"
          >
            <span
              class="added dark"
            >
              [[☃ radio 1]]
            </span>
          </div>
          <div />
        </div>
      </div>
      <div
        class="diff-row before"
        role="button"
        tabindex="0"
      />
      <div
        class="diff-row after"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="diff-header"
    >
      radio 1
    </div>
    <div
      class="diff-header"
    >
      radio 1
    </div>
    <div
      class="diff-body ui-helper-clearfix"
    >
      <div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="blank-space diff-row before"
            >
              <div
                style="padding-inline-start: 0;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
            <div
              class="added dark diff-row after"
            >
              <div
                style="padding-inline-start: 0;"
              >
                options: 
                <span
                  class="inner-value dark added dark"
                />
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  choices: 
                  <span
                    class="inner-value dark added dark"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    0: 
                    <span
                      class="inner-value dark added dark"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark added dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark added dark"
                      >
                        "radio-choice-0"
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    1: 
                    <span
                      class="inner-value dark added dark"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark added dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark added dark"
                      >
                        "radio-choice-1"
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    2: 
                    <span
                      class="inner-value dark added dark"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark added dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark added dark"
                      >
                        "radio-choice-2"
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 40px;"
                  >
                    3: 
                    <span
                      class="inner-value dark added dark"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      content: 
                      <span
                        class="inner-value dark added dark"
                      >
                        ""
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="clear: both;"
                >
                  <div
                    class="blank-space diff-row before"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      <span
                        class="inner-value dark blank-space"
                      />
                    </div>
                  </div>
                  <div
                    class="added dark diff-row after"
                  >
                    <div
                      style="padding-inline-start: 60px;"
                    >
                      id: 
                      <span
                        class="inner-value dark added dark"
                      >
                        "radio-choice-3"
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  randomize: 
                  <span
                    class="inner-value dark added dark"
                  >
                    false
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  hasNoneOfTheAbove: 
                  <span
                    class="inner-value dark added dark"
                  >
                    false
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  multipleSelect: 
                  <span
                    class="inner-value dark added dark"
                  >
                    false
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  countChoices: 
                  <span
                    class="inner-value dark added dark"
                  >
                    false
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 20px;"
                >
                  deselectEnabled: 
                  <span
                    class="inner-value dark added dark"
                  >
                    false
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
